-Updated JQuery & google analytics -Changed font of title and menu buttons -Modified content of pages -Fixed bug where content boxes would not update their alignment untill after all other boxes had finished resizing

--- a/Website/common/css/basic_style.css
+++ b/Website/common/css/basic_style.css
@@ -3,6 +3,4 @@ body {
 	padding: 0;
 	height: 100%;
 	width: 100%;
-	background-image: url("../img/hex_tile.png");
-    background-repeat: repeat;
 }
